--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,6 +8,12 @@ pipeline{
             steps
             {
              echo "kartik beta mera hai"
+             withMaven(maven : 'apache.maven.3.6.3')
+             {
+                 sh 'mvn clean'
+                 sh 'mvn package'
+
+             }
 
             }
         }
